2007-08-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the JPEG2000 JPC glob to the
	list, as well as magic for both JP2 and JPC files

	* tests/list:
	* tests/test.jp2:
	* tests/test.jpc: Add tests for the above

2007-08-28  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/sdp, with information from
	http://www.rfc-editor.org/rfc/rfc2327.txt
	* tests/*: Add an SDP stream description, the filename clashes with
	StarOffice presentations

2007-08-28  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Split out *.nsc into its own mime-type, as
	we'd like GStreamer to handle it directly, rather than us
	Confusing mime-type name from
	http://en.wikipedia.org/wiki/Windows_Media_Station
	* tests/*: Add an ASX playlist and an NSC stream description

2007-08-28  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Check for xmllint

	* Makefile.am: run test-mime-data from xdgmime if we're running in CVS
	and have xdgmime checked out and built in the parent
	* tests/*: add loads of test data and a test list from Matthias Clasen
	<mclasen@redhat.com> (Closes: #5210)

	* freedesktop.org.xml.in:
	- Remove "Microsoft Word 6.0 Document" matchlet at offset 2080, it's a
	localised string (ie. says "Dokument" in German, etc.)
	- Add better matchlets from file(1) for word documents
	- Add magic for StarWriter (tentative) and for glade files
	- Up the priority of the EPS matchlet so that EPS files are not
	recognised as postscript files

2007-08-12  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add a mime-type for QTIF QuickTime image
	files

=== shared-mime-info 0.22 ===

2007-07-30  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* Makefile.am: upd

2007-07-27  Bastien Nocera  <hadess@hadess.net>

	* configure.in: bump up the release version, need to do a release

2007-07-27  Frederic Crozat  <fcrozat@mandriva.com>

	* freedesktop.org.xml.in: Add audio/ogg, video/ogg as subclasses of