@@ -1,3 +1,8 @@
+2007-08-31  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add the audio/x-m4b mime-type,
+	as a sub-class of audio/mp4
+
 2007-08-29  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add the JPEG2000 JPC glob to the
